<resources>
    <string name="app_name">PWRCLIP App</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Insights</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_add">Add</string>
    <string name="title_devices">Devices</string>
    <string name="title_settings">Settings</string>
    <string name="fab_add">Add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>