<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.pwrclipapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.pwrclipapp.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_add"
        android:name="com.example.pwrclipapp.ui.add.AddFragment"
        android:label="@string/title_add"
        tools:layout="@layout/fragment_add" />
    <fragment
        android:id="@+id/navigation_device"
        android:name="com.example.pwrclipapp.ui.home.DeviceFragment"
        android:label="fragment_device"
        tools:layout="@layout/fragment_device" />
    <fragment
        android:id="@+id/navigation_add_wifi"
        android:name="com.example.pwrclipapp.ui.add.AddWIFIFragment"
        android:label="fragment_add_w_i_f_i"
        tools:layout="@layout/fragment_add_w_i_f_i" />

</navigation>